added directories for backend, added session.go to recognize POST for logging in user.
