# doc/api.yaml
@@ -21,7 +21,16 @@ paths:
         description: User details
         content:
           application/json:
-            schema: { $ref: "#/components/schemas/User" }
+            schema:
+              type: object
+              properties:
+                Username: 
+                  type: string
+                  description: "a unique identifier of the user"
+                  example: Maria
+                  pattern: 'ˆ.*?$'
+                  minLength: 3
+                  maxLength: 16
         required: true
       responses:
         '201':
@@ -345,7 +354,7 @@ components:
           type: string
           example: Maria
           pattern: 'ˆ.*?$'
-          minLength: 3
+          minLength: 1
           maxLength: 16
         Profile Picture:
           description: "the profile picture of the user"
